--- a/Demo/UniPas_Starter_Project.dproj
+++ b/Demo/UniPas_Starter_Project.dproj
@@ -162,6 +162,9 @@
             <FormType>fmx</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="..\UniPas Routing Library\UniPas.LanguageSupport.pas"/>
+        <DCCReference Include="..\UniPas Routing Library\Language_Translations\UniPas.LanguageSupport.AF.pas"/>
+        <DCCReference Include="..\UniPas Routing Library\Language_Translations\UniPas.LanguageSupport.EN.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -202,6 +205,12 @@
                 <DeployFile LocalName="Win64\Debug\UniPas_Starter_Project.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win64">
                         <RemoteName>UniPas_Starter_Project.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="Win64\Debug\UniPas_Starter_Project.rsm" Configuration="Debug" Class="DebugSymbols">
+                    <Platform Name="Win64">
+                        <RemoteName>UniPas_Starter_Project.rsm</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
